Fixed compatibility issues on Firefox

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Container divs and images */
+﻿/* Container divs and images */
 .completeDiv {
 	position: absolute;
 	overflow: hidden;
@@ -72,9 +72,9 @@ div.locked:hover {
 	transition: color 1s ease-in;
 
 	text-shadow: -1px -1px 0 black,
-	1px -1px 0 black,
-	-1px 1px 0 black,
-	1px 1px 0 black;
+		1px -1px 0 black,
+		-1px 1px 0 black,
+		1px 1px 0 black;
 }
 div.unlocked:hover {
 	background-color: rgba(10, 10, 10, 0.2);
@@ -94,9 +94,9 @@ div.unlocked:hover {
 	color: rgb(255, 230, 0);
 
 	text-shadow: -1px -1px 0 black,
-	1px -1px 0 black,
-	-1px 1px 0 black,
-	1px 1px 0 black;
+		1px -1px 0 black,
+		-1px 1px 0 black,
+		1px 1px 0 black;
 }
 div.potential:hover {
 	background-color: rgba(200, 200, 200, 0.25);
@@ -111,9 +111,9 @@ div.potential:hover {
 	color: rgb(255, 230, 0);
 
 	text-shadow: -1px -1px 0 black,
-	1px -1px 0 black,
-	-1px 1px 0 black,
-	1px 1px 0 black;
+		1px -1px 0 black,
+		-1px 1px 0 black,
+		1px 1px 0 black;
 }
 /* End chunk grid and buttons */
 
@@ -152,15 +152,14 @@ div.potential:hover {
 	width: 100%;
 	height: 50%;
 	text-align: center;
+	line-height: 80px;
 	border-bottom: 2px solid black
 }
 .picker {
 	position: relative;
-	top: 5%;
-	left: 2%;
 	width: 200px;
 	height: 60px;
-	margin: 0% 0% 5% 0%;
+	margin: 0px;
 	font-size: 1.2em;
 	color: black;
 
@@ -221,7 +220,8 @@ button.picker:focus {
 	border-right: 35px solid rgb(71, 177, 0);;
 	border-radius: 15px;
 
-	transition: left 0.5s ease-in-out, transform 0.5s ease-in-out;
+	transition: left 0.5s ease-in-out,
+		transform 0.5s ease-in-out;
 }
 .arrowLeft:hover {
 	border-right: 35px solid rgb(53, 133, 0);
